logs/Slang/generated/yosys/asicworld_code_hdl_models_arbiter_tb.sv.log
name: asicworld_code_hdl_models_arbiter_tb
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_arbiter_tb.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_arbiter_tb.v:19:3: error: use of undeclared identifier '$fdisplay'
  $fdisplay(file, "%b", {gnt3, gnt2, gnt1, gnt0});
  ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_arbiter_tb.v:22:10: error: use of undeclared identifier '$fopen'
  file = $fopen(`outfile);
         ^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_arbiter_tb.v:22:17: error: unknown macro or compiler directive '`outfile'
  file = $fopen(`outfile);
                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_arbiter_tb.v:47:1: error: unknown module 'arbiter'
arbiter U (
^~~~~~~
